# pointmonitor

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc  update_apoint.qml  update_dpoint.qml
cmake/: .cproject  .project  FindQt5.cmake
dataclient/: CMakeLists.txt
dataclient/include/dataclient/: DataClientInterface.hpp
dataclient/src/: DataClientInterface.cpp
models/: CMakeLists.txt
models/include/models/: Conditions.hpp  DataModels.hpp
models/src/: Conditions.cpp  DataModels.cpp
